service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeinfo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nodeinfo
  sessionAffinity: None
  type: ClusterIP
