ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeinfo
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: "kind-usa.inlets.dev"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nodeinfo
              port:
                number: 8080
  tls:
  - hosts:
    - "kind-usa.inlets.dev"
    secretName: nodeinfo-tls
